Bug 711418 - Enable font inflation for body and html elements with fixed heights. [r=dbaron]